about us finished

--- a/aboutus.html
+++ b/aboutus.html
@@ -40,26 +40,28 @@
             <span class="date">TED University, 2025</span>
             <h1>EDUCORE TEAM</h1>
           </header>
-
-          <h2>Image</h2>
-
-          <h3>Fit</h3>
           <div class="box alt">
             <div class="row gtr-50 gtr-uniform">
               <div class="col-4">
                 <span class="image fit"
                   ><img src="images/ycb.jpg" alt=""
                 /></span>
-              </div>
-              <div class="col-3">
-                <span class="image fit"
-                  ><img src="images/besir.jpg" alt=""
-                /></span>
+                <p style="text-align: center;">Yüksel Çağlar BAYPINAR<br /> Computer Engineering</p>
               </div>
               <div class="col-4">
                 <span class="image fit"
-                  ><img src="images/pic04.jpg" alt=""
+                  ><img src="images/besir.jpg" alt=""
                 /></span>
+                <p style="text-align: center;">İrem BEŞİROĞLU<br /> Software Engineering</p>
+              </div>
+              <div class="col-4">
+                <span class="image fit"
+                  ><img src="images/yigit.jpg" alt=""
+                /></span>
+                <p style="text-align: center;">Yiğit Oğuzhan KÖKTEN<br /> Computer Engineering</p>
+              </div>
+            </div>
+          </div>
               </div>
             </div>
           </div>
