--- a/aboutus.html
+++ b/aboutus.html
@@ -24,11 +24,11 @@
       <nav id="nav">
         <ul class="links">
           <li><a href="index.html">Syntax Savior</a></li>
-          <li class="active"><a href="proposal.html">Proposal</a></li>
+          <li><a href="proposal.html">Proposal</a></li>
           <li><a href="specifications.html">Specifications</a></li>
           <li><a href="analysis.html">Analysis</a></li>
           <li><a href="hldesign.html">High Level Design</a></li>
-          <li><a href="aboutus.html">About Us</a></li>
+          <li class="active"><a href="aboutus.html">About Us</a></li>
         </ul>
       </nav>
 
