Add Low Level Design page and update navigation links

--- a/analysis.html
+++ b/analysis.html
@@ -28,6 +28,7 @@
           <li><a href="specifications.html">Specifications</a></li>
           <li class="active"><a href="analysis.html">Analysis</a></li>
           <li><a href="hldesign.html">High Level Design</a></li>
+          <li class="active"><a href="lowleveldesign.html">Low Level Design</a></li>
           <li><a href="aboutus.html">About Us</a></li>
         </ul>
       </nav>
