--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
           <li><a href="specifications.html">Specifications</a></li>
           <li><a href="analysis.html">Analysis</a></li>
           <li><a href="hldesign.html">High Level Design</a></li>
+          <li><a href="lowleveldesign.html">Low Level Design</a></li>
           <li><a href="aboutus.html">About Us</a></li>
         </ul>
         <ul class="icons">
@@ -73,9 +74,23 @@
               <a>Why Syntax Savior<br /> </a>
             </h2>
             <p>
-				This innovative platform is designed to lighten the load on lab assistants and tutors, ensuring they can efficiently manage student queries without getting overwhelmed. By encouraging students to engage in self-learning and become familiar with reading documentation, Syntax Savior fosters a more independent and inquisitive learning environment. It aids students in developing essential problem-solving skills, allowing them to tackle coding challenges with confidence and precision.
-				<br /><br />
-				Additionally, Syntax Savior aims to reduce dependence on AI tools like ChatGPT, promoting a healthier balance between AI assistance and human understanding. This approach makes lab sessions more impactful and productive, turning them into valuable opportunities for hands-on learning and practical application. Ultimately, Syntax Savior is not just a tool, but a comprehensive solution to enhancing the educational experience for both students and educators.
+              This innovative platform is designed to lighten the load on lab
+              assistants and tutors, ensuring they can efficiently manage
+              student queries without getting overwhelmed. By encouraging
+              students to engage in self-learning and become familiar with
+              reading documentation, Syntax Savior fosters a more independent
+              and inquisitive learning environment. It aids students in
+              developing essential problem-solving skills, allowing them to
+              tackle coding challenges with confidence and precision.
+              <br /><br />
+              Additionally, Syntax Savior aims to reduce dependence on AI tools
+              like ChatGPT, promoting a healthier balance between AI assistance
+              and human understanding. This approach makes lab sessions more
+              impactful and productive, turning them into valuable opportunities
+              for hands-on learning and practical application. Ultimately,
+              Syntax Savior is not just a tool, but a comprehensive solution to
+              enhancing the educational experience for both students and
+              educators.
             </p>
           </header>
           <a href="#" class="image main"
@@ -95,59 +110,114 @@
               <span class="date">October 13, 2024</span>
               <h2><a href="proposal.html">Project Proposal </a></h2>
             </header>
-			<a href="proposal.html" class="image fit"
-			  ><img src="images/pic02.jpg" alt=""
-			/></a>
-			<p>
-			  This document outlines the initial proposal for the Syntax Savior project, detailing the objectives, scope, and expected outcomes. It serves as a foundational guide for the development and implementation phases.
-			</p>
-			<ul class="actions special">
-			  <li><a href="proposal.html" class="button">Full Document</a></li>
-			</ul>
+            <a href="proposal.html" class="image fit"
+              ><img src="images/pic02.jpg" alt=""
+            /></a>
+            <p>
+              This document outlines the initial proposal for the Syntax Savior
+              project, detailing the objectives, scope, and expected outcomes.
+              It serves as a foundational guide for the development and
+              implementation phases.
+            </p>
+            <ul class="actions special">
+              <li><a href="proposal.html" class="button">Full Document</a></li>
+            </ul>
           </article>
           <article>
             <header>
               <span class="date">October 25, 2024</span>
-              <h2><a href="specifications.html">Project Specifications Report</a></h2>
+              <h2>
+                <a href="specifications.html">Project Specifications Report</a>
+              </h2>
             </header>
             <a href="specifications.html" class="image fit"
-			  ><img src="images/pic03.jpg" alt=""
-			/></a>
-			<p>
-			  This report provides a comprehensive overview of the technical specifications and requirements for the Syntax Savior project. It includes detailed descriptions of the system architecture, components, and interfaces.
-			</p>
-			<ul class="actions special">
-			  <li><a href="specifications.html" class="button">Full Document</a></li>
-			</ul>
-		  </article>
-		  <article>
-			<header>
-			  <span class="date">23 November, 2024</span>
-			  <h2><a href="analysis.html">Project Analysis Report</a></h2>
-			</header>
-			<a href="analysis.html" class="image fit"
-			  ><img src="images/pic04.jpg" alt=""
-			/></a>
-			<p>
-			  This document analyzes the project's feasibility, potential risks, and benefits. It also includes recommendations for mitigating identified risks.
-			</p>
-			<ul class="actions special">
-			  <li><a href="analysis.html" class="button">Full Document</a></li>
-			</ul>
-		  </article>
-		  <article>
-			<header>
-			  <span class="date">December 27, 2024</span>
-			  <h2><a href="hldesign.html">High Level Design Report</a></h2>
-			</header>
-			<a href="hldesign.html" class="image fit"
-			  ><img src="images/pic05.jpg" alt=""
-			/></a>
-			<p>
-			  This report outlines the high-level design of the Syntax Savior system, including the overall architecture, key components, and their interactions. It serves as a blueprint for the detailed design and implementation phases.
-			</p>
+              ><img src="images/pic03.jpg" alt=""
+            /></a>
+            <p>
+              This report provides a comprehensive overview of the technical
+              specifications and requirements for the Syntax Savior project. It
+              includes detailed descriptions of the system architecture,
+              components, and interfaces.
+            </p>
+            <ul class="actions special">
+              <li>
+                <a href="specifications.html" class="button">Full Document</a>
+              </li>
+            </ul>
+          </article>
+          <article>
+            <header>
+              <span class="date">23 November, 2024</span>
+              <h2><a href="analysis.html">Project Analysis Report</a></h2>
+            </header>
+            <a href="analysis.html" class="image fit"
+              ><img src="images/pic04.jpg" alt=""
+            /></a>
+            <p>
+              This document analyzes the project's feasibility, potential risks,
+              and benefits. It also includes recommendations for mitigating
+              identified risks.
+            </p>
+            <ul class="actions special">
+              <li><a href="analysis.html" class="button">Full Document</a></li>
+            </ul>
+          </article>
+          <article>
+            <header>
+              <span class="date">December 27, 2024</span>
+              <h2><a href="hldesign.html">High Level Design Report</a></h2>
+            </header>
+            <a href="hldesign.html" class="image fit"
+              ><img src="images/pic05.jpg" alt=""
+            /></a>
+            <p>
+              This report outlines the high-level design of the Syntax Savior
+              system, including the overall architecture, key components, and
+              their interactions. It serves as a blueprint for the detailed
+              design and implementation phases.
+            </p>
             <ul class="actions special">
               <li><a href="hldesign.html" class="button">Full Document</a></li>
+            </ul>
+          </article>
+          <article>
+            <header>
+              <span class="date">December 27, 2024</span>
+              <h2><a href="hldesign.html">High Level Design Report</a></h2>
+            </header>
+            <a href="hldesign.html" class="image fit"
+              ><img src="images/pic05.jpg" alt=""
+            /></a>
+            <p>
+              This report outlines the high-level design of the Syntax Savior
+              system, including the overall architecture, key components, and
+              their interactions. It serves as a blueprint for the detailed
+              design and implementation phases.
+            </p>
+            <ul class="actions special">
+              <li><a href="hldesign.html" class="button">Full Document</a></li>
+            </ul>
+          </article>
+          <article>
+            <header>
+              <span class="date">March 09, 2025</span>
+              <h2><a href="hldesign.html">Low Level Design Report</a></h2>
+            </header>
+            <a href="lowleveldesign.html" class="image fit"
+              ><img src="images/pic10.jpg" alt=""
+            /></a>
+            <p>
+              This report provides the low-level design of the SyntaxSavior
+              system, detailing the internal structure, class interfaces, and
+              implementation specifics of each component. It refines the
+              high-level design into a comprehensive blueprint for development,
+              ensuring clarity, maintainability, and adherence to engineering
+              standards. This document serves as a guide for developers during
+              the implementation phase, bridging the gap between conceptual
+              design and practical execution.
+            </p>
+            <ul class="actions special">
+              <li><a href="lowleveldesign.html" class="button">Full Document</a></li>
             </ul>
           </article>
         </section>
