added test plan report

--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
           <li><a href="analysis.html">Analysis</a></li>
           <li><a href="hldesign.html">High Level Design</a></li>
           <li><a href="lowleveldesign.html">Low Level Design</a></li>
+          <li><a href="testplan.html">Test Plan</a></li>
           <li><a href="aboutus.html">About Us</a></li>
         </ul>
         <ul class="icons">
@@ -220,6 +221,24 @@
               <li><a href="lowleveldesign.html" class="button">Full Document</a></li>
             </ul>
           </article>
+          <article>
+            <header>
+              <span class="date">April 17, 2025</span>
+              <h2><a href="testplan.html">Test Plan Report</a></h2>
+            </header>
+            <a href="testplan.html" class="image fit"
+              ><img src="images/pic11.jpeg" alt=""
+            /></a>
+            <p>
+              This document outlines the test plan for the Syntax Savior
+              project, detailing the testing strategy, objectives, resources,
+              schedule, and deliverables. It serves as a guide for the testing
+              team to ensure comprehensive coverage and effective validation of
+              the system.
+            </p>
+            <ul class="actions special">
+              <li><a href="testplan.html" class="button">Full Document</a></li>
+            </ul>
         </section>
 
         <!-- Footer -->
