--- a/proposal.html
+++ b/proposal.html
@@ -29,6 +29,7 @@
           <li><a href="analysis.html">Analysis</a></li>
           <li><a href="hldesign.html">High Level Design</a></li>
           <li><a href="lowleveldesign.html">Low Level Design</a></li>
+          <li><a href="testplan.html">Test Plan</a></li>
           <li><a href="aboutus.html">About Us</a></li>
         </ul>
       </nav>
