--- a/analysis.html
+++ b/analysis.html
@@ -28,7 +28,8 @@
           <li><a href="specifications.html">Specifications</a></li>
           <li class="active"><a href="analysis.html">Analysis</a></li>
           <li><a href="hldesign.html">High Level Design</a></li>
-          <li class="active"><a href="lowleveldesign.html">Low Level Design</a></li>
+          <li><a href="lowleveldesign.html">Low Level Design</a></li>
+          <li><a href="testplan.html">Test Plan</a></li>
           <li><a href="aboutus.html">About Us</a></li>
         </ul>
       </nav>
