--- a/index.html
+++ b/index.html
@@ -163,6 +163,7 @@
               <li><a href="analysis.html" class="button">Full Document</a></li>
             </ul>
           </article>
+          <article>
           <header>
               <span class="date">December 27, 2024</span>
               <h2><a href="hldesign.html">High Level Design Report</a></h2>
