--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
           </article>
           <article>
             <header>
-              <span class="date">23 November, 2024</span>
+              <span class="date">November 23, 2024</span>
               <h2><a href="analysis.html">Project Analysis Report</a></h2>
             </header>
             <a href="analysis.html" class="image fit"
@@ -164,7 +164,7 @@
             </ul>
           </article>
           <article>
-          <header>
+            <header>
               <span class="date">December 27, 2024</span>
               <h2><a href="hldesign.html">High Level Design Report</a></h2>
             </header>
@@ -200,7 +200,9 @@
               design and practical execution.
             </p>
             <ul class="actions special">
-              <li><a href="lowleveldesign.html" class="button">Full Document</a></li>
+              <li>
+                <a href="lowleveldesign.html" class="button">Full Document</a>
+              </li>
             </ul>
           </article>
           <article>
@@ -221,6 +223,25 @@
             <ul class="actions special">
               <li><a href="testplan.html" class="button">Full Document</a></li>
             </ul>
+          </article>
+          <article>
+            <header>
+              <span class="date">26 May, 2025</span>
+              <h2><a href="final.html">Final Report</a></h2>
+            </header>
+            <a href="final.html" class="image fit"
+              ><img src="images/logo.jpeg" alt=""
+            /></a>
+            <p>
+              This document serves as the final report for the Syntax Savior
+              project, summarizing the project's outcomes, achievements, and
+              lessons learned. It provides a comprehensive overview of the
+              project's success and areas for future improvement.
+            </p>
+            <ul class="actions special">
+              <li><a href="final.html" class="button">Full Document</a></li>
+            </ul>
+          </article>
         </section>
 
         <!-- Footer -->
