--- a/analysis.html
+++ b/analysis.html
@@ -30,7 +30,7 @@
           <li><a href="hldesign.html">High Level Design</a></li>
           <li><a href="lowleveldesign.html">Low Level Design</a></li>
           <li><a href="testplan.html">Test Plan</a></li>
-                    <li><a href="final.html">Test Plan</a></li>
+                    <li><a href="final.html">Final Report</a></li>
 
           <li><a href="aboutus.html">About Us</a></li>
         </ul>
