--- a/index.html
+++ b/index.html
@@ -51,6 +51,8 @@
           <li><a href="hldesign.html">High Level Design</a></li>
           <li><a href="lowleveldesign.html">Low Level Design</a></li>
           <li><a href="testplan.html">Test Plan</a></li>
+          <li><a href="final.html">Test Plan</a></li>
+
           <li><a href="aboutus.html">About Us</a></li>
         </ul>
         <ul class="icons">
